# ktoya

documentation/: server.txt
server/: .gitignore  CMakeLists.txt  server
server/config/: database.json  server.json
server/src/: account.hpp  config.hpp  run.cpp  server.hpp  serverDB.hpp
