cmake_minimum_required(VERSION 2.8.3)
project(server)
set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS  "-lboost_system -lssl -pthread -lboost_filesystem -lboost_thread -ldl -lsqlite3 -lpqxx -lpq ${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS  "-lboost_system -lssl -pthread -lboost_filesystem -lboost_thread -ldl -lsqlite3 -lpqxx -lpq ${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(PQXX /usr/local/include/pqxx)
find_library(PQXX_LIB pqxx)
find_library(PQ_LIB pq)
find_package(Boost COMPONENTS system)
include_directories(
  thirdparty
)
add_executable(server src/run.cpp)
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
target_link_libraries(server ${catkin_LIBRARIES})
target_link_libraries(server ${CMAKE_DL_LIBS})
target_link_libraries(server ${PQXX_LIB} ${PQ_LIB})
